--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -20,10 +20,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="btn btn-outline-primary btn-sm nav-link" asp-area="" asp-controller="Home" asp-action="Index">Registrar</a>
+                            <a class="btn btn-outline-primary btn-sm nav-link" asp-area="" asp-controller="Candidate" asp-action="Create">Registrar</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn btn-outline-primary btn-sm nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Candidatos</a>
+                            <a class="btn btn-outline-primary btn-sm nav-link" asp-area="" asp-controller="Candidate" asp-action="Index">Candidatos</a>
                         </li>
                     </ul>
                 </div>
